ssl bug discovered